--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "sass": "^1.77.1",
     "scss": "^0.2.4"
   },
