--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.1",
     "scss": "^0.2.4"
   },
